deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "portfolio-deployment"
  namespace: "default"
  labels:
    app: "portfolio-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "portfolio-1"
  template:
    metadata:
      labels:
        app: "portfolio-1"
    spec:
      containers:
      - name: "portfolio-sha256-1"
        image: "gcr.io/creativesly/portfolio:v1"
