service.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata:
    name: "portfolio-1-service"
    namespace: "default"
    labels:
      app: "portfolio-1"
  spec:
    ports:
    - protocol: "TCP"
      port: 80
    selector:
      app: "portfolio-1"
    type: "LoadBalancer"
    loadBalancerIP: ""
